--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,15 +10,6 @@ body {
 .background {
   width: 100%;
   height: 100%;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#49c0f0+0,2cafe3+100;Blue+3D+%2311 */
-  background: rgb(73, 192, 240);
-  /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(73, 192, 240, 1) 0%, rgba(44, 175, 227, 1) 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(73, 192, 240, 1) 0%, rgba(44, 175, 227, 1) 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(73, 192, 240, 1) 0%, rgba(44, 175, 227, 1) 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#49c0f0', endColorstr='#2cafe3', GradientType=0);
-  /* IE6-9 */
+  background-color: #113311;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='250' viewBox='0 0 20 20'%3E%3Cg %3E%3Cpolygon fill='%23242' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%23242' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E");
 }
