--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,16 +2,32 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center f-primary border-dot mt-3 flex justify-center items-center">Simulador</h1>
+        <h1
+          class="text-center f-primary border-dot mt-3 flex justify-center items-center"
+        >
+          Simulador
+        </h1>
         <form [formGroup]="formSalary" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="salary" class="f-primary">Renda Mensal Bruto</label>
-            <input type="text" class="form-control" formControlName="salary" name="salary" id="salary">
+            <input
+              type="text"
+              class="form-control"
+              formControlName="salary"
+              name="salary"
+              id="salary"
+            />
 
-            {{ formSalary.value.salary | currency:'BRL':true }}
-            <h4 style="color: rgb(151, 14, 14)" *ngIf="errorMessages">Valor deve ser maior que zero! (:</h4>
+            {{ formSalary.value.salary | currency: "BRL":true }}
+            <h4 style="color: rgb(151, 14, 14)" *ngIf="errorMessages">
+              Valor deve ser maior que zero! (:
+            </h4>
           </div>
-          <button type="submit" class="btn btn-warning w-100 text-white f-primary">Carregar
+          <button
+            type="submit"
+            class="btn btn-warning w-100 text-white f-primary"
+          >
+            Carregar
           </button>
         </form>
       </div>
@@ -19,24 +35,57 @@
     <div class="row mt-5">
       <div class="col-md-6">
         <h2 class="f-primary">CLT</h2>
-        <table class="table table-borderless table-sm text-white">
+        <table
+          class="table table-borderless table-sm text-white"
+          *ngIf="salaryResponse.length > 0"
+        >
           <tbody>
             <tr>
-              <td>Liquido</td>
-              <th>R$10.000,00</th>
+              <td>Salario Bruto</td>
+              <th>
+                {{ salaryResponse[0].salary | currency: "BRL":true:"1.2-2" }}
+              </th>
+            </tr>
+            <tr *ngFor="let tributes of salaryResponse[0].tributes">
+              <td>{{ tributes.name }}</td>
+              <th>{{ tributes.value | currency: "BRL":true:"1.2-2" }}</th>
             </tr>
             <tr>
-              <td>INSS:</td>
-              <th>R$1.400,00</th>
-            </tr>
-            <tr>
-              <td>IRRF</td>
-              <th>R$1.100,00</th>
+              <td>Salario Liquido</td>
+              <th>
+                {{
+                  salaryResponse[0].liquidSalary | currency: "BRL":true:"1.2-2"
+                }}
+              </th>
             </tr>
           </tbody>
         </table>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" *ngIf="salaryResponse.length > 1">
+        <h3 *ngIf="salaryResponse.length > 1" style="color: white;">
+          Ultimas Consultas
+        </h3>
+        <table
+          class="table table-borderless table-sm text-white"
+          *ngFor="let sal of salaryResponse"
+        >
+          <tbody>
+            <tr>
+              <td>Bruto</td>
+              <th>{{ sal.salary | currency: "BRL":true:"1.2-2" }}</th>
+            </tr>
+            <tr>
+              <td>Liquido</td>
+              <th>{{ sal.liquidSalary | currency: "BRL":true:"1.2-2" }}</th>
+            </tr>
+            <tr *ngFor="let tributes of sal.tributes">
+              <td>{{ tributes.name }}</td>
+              <td>{{ tributes.value }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-md-6" *ngIf="false">
         <h2 class="f-primary">PJ</h2>
         <table class="table table-borderless table-sm text-white">
           <tbody>
