--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,8 +17,6 @@
               name="salary"
               id="salary"
             />
-
-            {{ formSalary.value.salary | currency: "BRL":true }}
             <h4 style="color: rgb(151, 14, 14)" *ngIf="errorMessages">
               Valor deve ser maior que zero! (:
             </h4>
@@ -32,13 +30,18 @@
         </form>
       </div>
     </div>
-    <div class="row mt-5">
+    <div class="loader" *ngIf="loader">
+      <div class="lds-ellipsis mt-5 mb-5">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class="row mt-5" *ngIf="salaryResponse.length > 0">
       <div class="col-md-6">
         <h2 class="f-primary">CLT</h2>
-        <table
-          class="table table-borderless table-sm text-white"
-          *ngIf="salaryResponse.length > 0"
-        >
+        <table class="table table-borderless table-sm text-white">
           <tbody>
             <tr>
               <td>Salario Bruto</td>
