Create button component shared

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,9 +13,7 @@
               Valor deve ser maior que zero! (:
             </h4>
           </div>
-          <button type="submit" class="btn btn-warning w-100 text-white f-primary">
-            Carregar
-          </button>
+          <app-button type="submit"></app-button>
         </form>
       </div>
     </div>
