--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,12 +8,13 @@
         <form [formGroup]="formSalary" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="salary" class="f-primary">Renda Mensal Bruto</label>
-            <input type="text" class="form-control" formControlName="salary" name="salary" id="salary" />
-            <h4 style="color: rgb(151, 14, 14)" *ngIf="errorMessages">
-              Valor deve ser maior que zero! (:
-            </h4>
+            <input type="number" class="form-control" formControlName="salary" name="salary" id="salary" required
+              minlength="2" [(ngModel)]="salary" placeholder="R$998,00" />
+            <div class="alert alert-danger mt-2" *ngIf="salary < 998">
+              Valor deve ser maior que o salário mínimo! :(
+            </div>
           </div>
-          <app-button type="submit"></app-button>
+          <app-button type="submit" [disabled]="salary < 998"></app-button>
         </form>
       </div>
     </div>
