--- a/src/app/pages/shared/components/button/button.component.html
+++ b/src/app/pages/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button [type]="type" class="btn btn-warning w-100 text-white f-primary">
+<button [type]="type" class="btn btn-warning w-100 text-white f-primary" [disabled]="disabled">
   Carregar
 </button>
