--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12" *ngIf="!loader">
         <h1 class="text-center f-primary border-dot mt-3 flex justify-center items-center">
           Simulador
         </h1>
@@ -24,7 +24,7 @@
     <div class="row mt-5" *ngIf="salaryResponse">
       <div class="col-md-3"></div>
       <div class="col-md-8">
-        <app-hiring-scheme-table hiring-scheme="CLT" [salary]="salaryResponse.salary"
+        <app-hiring-scheme-table *ngIf="!loader" hiring-scheme="CLT" [salary]="salaryResponse.salary"
           [liquidSalary]="salaryResponse.liquidSalary" [tributes]="salaryResponse.tributes">
         </app-hiring-scheme-table>
       </div>
